// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsFailedInstanceSection does not render when no results are failing 1`] = `null`;

exports[`TabStopsFailedInstanceSection does renders when no results are failing and set to alwaysRenderSection 1`] = `
<div
  className="tabStopsFailureInstanceSection"
  data-automation-id="tab-stops-failure-instance-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      badgeCount={0}
      outcomeType="fail"
      title="Failed instances"
      titleSize="title"
    />
  </HeadingElementForLevel>
  <TabStopsRequirementsWithInstances
    deps={{}}
    getCollapsibleComponentPropsWithInstance={[Function]}
    headingLevel={3}
    results={[]}
  />
</div>
`;

exports[`TabStopsFailedInstanceSection renders with failing results 1`] = `
<div
  className="tabStopsFailureInstanceSection"
  data-automation-id="tab-stops-failure-instance-section"
>
  <HeadingElementForLevel
    headingLevel={2}
  >
    <ResultSectionTitle
      badgeCount={10}
      outcomeType="fail"
      title="Failed instances"
      titleSize="title"
    />
  </HeadingElementForLevel>
  <TabStopsRequirementsWithInstances
    deps={{}}
    getCollapsibleComponentPropsWithInstance={[Function]}
    headingLevel={3}
    results={
      [
        {
          "description": "All interactive elements can be reached using the Tab and arrow keys. (Partially automated)",
          "id": "keyboard-navigation",
          "instances": [
            {
              "description": "test desc 1",
              "id": "test-id-1",
            },
          ],
          "isExpanded": false,
          "name": "Keyboard navigation",
        },
        {
          "description": "There are no interactive elements that “trap” input focus and prevent navigating away. (Partially automated)",
          "id": "keyboard-traps",
          "instances": [
            {
              "description": "test desc 2",
              "id": "test-id-2",
            },
          ],
          "isExpanded": false,
          "name": "Keyboard traps",
        },
      ]
    }
  />
</div>
`;
